--- a/src/assets/css/booking.css
+++ b/src/assets/css/booking.css
@@ -90,9 +90,9 @@
 }
 
 .booking-calendar .calendar-dates li.selected button {
-  background: #111 !important;
+  background: #2f8f4e !important;
   color: #fff !important;
-  border-color: #111 !important;
+  border-color: #2f8f4e !important;
 }
 
 .booking-calendar .calendar-dates li.unavailable button {
