--- a/src/assets/css/booking.css
+++ b/src/assets/css/booking.css
@@ -14,8 +14,9 @@
 }
 
 .booking-time-slot.active {
-  background: #111;
+  background: #2f8f4e;
   color: #fff;
+  border-color: #2f8f4e;
 }
 
 .booking-title {
