--- a/src/assets/css/booking.css
+++ b/src/assets/css/booking.css
@@ -19,6 +19,14 @@
   border-color: #2f8f4e;
 }
 
+.booking-time-slot.active:hover,
+.booking-time-slot.active:focus,
+.booking-time-slot.active:active {
+  background: #2f8f4e;
+  color: #fff;
+  border-color: #2f8f4e;
+}
+
 .booking-title {
   text-align: center;
   font-weight: 600;
