--- a/src/assets/sass/_layout/_newsletter.scss
+++ b/src/assets/sass/_layout/_newsletter.scss
@@ -157,14 +157,20 @@
 				}
 				.calendar-body {
 					padding: 20px 0 16px;
+					ul {
+						row-gap: 12px;
+					}
 					li {
 						font-size: 0.9rem;
+						line-height: 28px;
 					}
 					.calendar-dates li {
-						margin-top: 18px;
+						margin-top: 0;
+						height: 32px;
+						line-height: 32px;
 						&::before {
-							width: 32px;
-							height: 32px;
+							width: 28px;
+							height: 28px;
 						}
 					}
 				}
